--- a/main.tex
+++ b/main.tex
@@ -32,13 +32,13 @@
 
 
 \section{Foreword}
-In transitioning to advanced classes, a physics student will find their familiar mathematical tools are inadequate to describe certain physical phenomena. The methods of traditional vector calculus in three dimensions, though very useful in electromagnetism and classical mechanics, are not always usable in higher dimensions, such as those used in general relativity and Hamiltonian mechanics. For that, we need differential geometry. When trying to learn a subject in mathematics, however, you tend to find books written for mathematicians, in a language that mathematicians are familiar with. As such, they are filled with long, obtuse definitions and prose that, while mathematically very precise, isn't exactly light reading, and can even be overkill for a proper physical understanding. 
+In transitioning to advanced classes, a physics student will find their familiar mathematical tools are inadequate to describe certain physical phenomena. The methods of traditional vector calculus in three dimensions, though very useful in electromagnetism and classical mechanics, are not always usable in higher dimensions, such as those used in general relativity and Hamiltonian mechanics. For that, we need differential geometry. When trying to learn a subject in mathematics, however, you tend to find books written for mathematicians, in a language that mathematicians are familiar with. As such, they are filled with long definitions, proofs, and prose that, while mathematically very precise, isn't exactly light reading, and can even be overkill for a proper physical understanding. 
 
 When mathematicians write for mathematicians, they develop and motivate their mathematical tools for the purposes of ease of calculation and proofs. There is, of course, nothing wrong with this. Mathematicians ought to be writing for mathematicians, and we shouldn't try to force the constraints of our field on theirs. For physicists, however, proofs and ease of calculation are not the fundamental problems. Rather, we are trying to mathematically codify, organize, and characterize physical phenomena. The math that we use, therefore, ought to be entirely physically motivated. When the math is developed properly for our purposes in physics, there shouldn't be any "purely mathematical" constructs without an actual physical meaning. We do not claim that we have fully achieved this goal here,\footnote{This is the greater goal of the Foundations of Physics project as a whole} as there are open, unresolved problems in our work here, which will be addressed here when appropriate. 
-What follows is a purely physical treatment of differential topology used in physics. While it is less mathematically rigorous than a typical math textbook, the hope is that the reader will be able to gain a geometric intuition for the math they use, so that the math isn't simply a black box beyond understanding, and that further study in the subject will be aided by a solid grounding here. Furthermore, by clarifying the underlying physical assumptions that we are working with at each step of the way, we will be more certain of the physical meaning of each of our mathematical tools, as well as the results we are able to derive.  The focus is always on readability, applicability, and physicality.
+What follows is a purely physical treatment of differential topology used in physics. While it is less mathematically rigorous than a typical math textbook, the hope is that the reader will be able to gain an intuition for the math they use, so that the math isn't simply a black box beyond understanding, and that further study in the subject will be aided by a solid grounding here. Furthermore, by clarifying the underlying physical assumptions that we are working with at each step of the way, we will be more certain of the meaning of each of our mathematical tools, as well as the results we are able to derive.  The focus is always on readability, applicability, and physicality.
 
 
-When we say "physical", we refer to properties and characteristics that we can directly measure in a laboratory. This definition is, at the moment, up for refinement though. Every tool we have in physics will at some level be an abstraction. Even something as simple as measuring mass will be to a certain extent "nonphysical." We cannot say, for instance, that an object in our laboratory is \emph{precisely} 5 kg, as our precision depends on the tools that we are using. We can say that it is 5 $\pm 0.01$ kg, but this error isn't a quantity that we directly measure. It would also not be correct to say that it is purely a mathematical abstraction. It is a result of the fact that our measurements are not infinitely precise. 
+When we say "physical", we refer to properties and characteristics that we can directly measure in a laboratory. This definition is, at the moment, up for refinement. Every tool we have in physics will at some level be an abstraction. Even something as simple as measuring mass will be to a certain extent "nonphysical." We cannot say, for instance, that an object in our laboratory is \emph{precisely} 5 kg, as our precision depends on the tools that we are using. We can say that it is 5 $\pm 0.01$ kg, but this error isn't a quantity that we directly measure. It would also not be correct to say that it is purely a mathematical abstraction. It is properly motivated given physical considerations, due to the fact that our measurements are not infinitely precise. 
 
 We assume on the part of the reader a class in introductory classical mechanics and electromagnetism, as well as vector calculus. More advanced topics in physics and mathematics may be touched on, but only for the use of giving an example, or demonstrating the usefulness of these mathematical tools. 
 
@@ -93,9 +93,6 @@ With coordinate systems now defined, we recognize that in many instances, two di
 Because of the poles, every location on Earth cannot be equally quantified with only one set of coordinates. This can be plainly seen on a typical flat map, such as a Mercator Projection. The most immediately obvious result of this flattening is that land proportions grow the closer to a pole they are, making Greenland appear massive, and the Sahara proportionally far smaller. The more important, but perhaps more subtle, outcome is that because the poles have in a sense been unraveled, the South Pole, which ought to be a single point, is an entire line along the southern edge of the map. A projection of the Earth onto a flat surface, such that one point on the Earth maps to one point on the surface, requires at least two separate maps. For instance, you could have a map of the top hemisphere, centered at the north pole, and then of the bottom hemisphere, centered at the south pole. From the Earth, then, we define \textbf{manifolds} as the general object that we project onto flat space. 
 
 
-\textbf{Insert a picture of the Mercator Projection}
-
-\textbf{Insert pictures of "polar" projections}
 
 \begin{defn}
 	A \textbf{manifold} is a set of physical objects $X$ such that for any $x \in X$ there exists a $U \subset X$ that contains $x$ and upon which a coordinate system $Q$ is defined. Manifolds have dimensionality, as determined by the dimension of their coordinate systems.
@@ -167,7 +164,7 @@ We can map between a k-surface and its boundary, if it exists, with the \textbf{
 	For k-surface $\sigma^k \in S^k$, the \textbf{boundary operator} $\partial : S^k \to S^{k-1}$ gives the set of boundary points of $\sigma^k$. 
 \end{defn}
 
-Intuitively, we can in general talk about the boundary of a k-surface being a wall, beyond which a point confined to the k-surface cannot go. In this way, the surface of the Earth acts as a boundary of the Earth. On the other hand, suppose we are restricting ourselves now just to the boundary of the Earth. We can travel along the surface as long as we wish in any direction without being stopped by any kind of wall. Thus, the surface of the Earth does not have a boundary. The fact that the boundary of a k-surface does not have a boundary is true for general k-surfaces, but proving it is beyond the scope of this project. \textbf{Probably have a picture}
+Intuitively, we can in general talk about the boundary of a k-surface being a wall, beyond which a point confined to the k-surface cannot go. In this way, the surface of the Earth acts as a boundary of the Earth. On the other hand, suppose we are restricting ourselves now just to the boundary of the Earth. We can travel along the surface as long as we wish in any direction without being stopped by any kind of wall. Thus, the surface of the Earth does not have a boundary. The fact that the boundary of a k-surface does not have a boundary is true for general k-surfaces, but proving it is beyond the scope of this project. 
 
 
 
@@ -189,7 +186,7 @@ We began our discussion of manifolds by assigning real number values to individu
  
  Consider now a topographic map of the Earth (a map distinguishing elevations), which we will denote by $M$. A coordinate system $Q: U \subset M \to \mathbb{R}$ will therefore take into account not only lateral and longitudinal positions, as in the geography example before, but also elevation. Now, let's place a baseball on this topographic map, and allow it to roll freely under the force of gravity and resisted by friction. Call the baseball's path $\lambda$. $\lambda$ is simply a 1-surface on $M$. As the baseball travels along $\lambda$, we can determine the work done on the baseball by gravity and friction. 
 
-Denote the work done on the baseball as $W: S^1 \to \mathbb{R}$, such that $W(\lambda)$ is the work done on the baseball along $\lambda$. Specify now three points along $\lambda$: $A, B,$ and $C$, such that $A \in \lambda$ is the starting point of the path, $C \in \lambda$ is the ending point of the path, and $B$ is some point between them. We can say, therefore, that \begin{gather} W(\lambda_{A\to C}) = W(\lambda_{A \to B}) + W(\lambda_{B \to C}).\end{gather} [\textbf{Insert a tikz picture here}]
+Denote the work done on the baseball as $W: S^1 \to \mathbb{R}$, such that $W(\lambda)$ is the work done on the baseball along $\lambda$. Specify now three points along $\lambda$: $A, B,$ and $C$, such that $A \in \lambda$ is the starting point of the path, $C \in \lambda$ is the ending point of the path, and $B$ is some point between them. We can say, therefore, that \begin{gather} W(\lambda_{A\to C}) = W(\lambda_{A \to B}) + W(\lambda_{B \to C}).\end{gather} 
 That is, we can say that the work done over the entire path is equal to the work done over one portion of the path plus the work done over the rest of the path. It follows, therefore, that we can break up the path into as many finite paths as we want, determine the work on each of them, and sum them to get the overall work. In other words, \begin{gather} W(\lambda) = \sum_{i=1}^{n} W(\lambda_i) \end{gather} for a line split into $n$ pieces (not necessarily equally large), stuck end-to-end. The function $W$ is therefore linear.\footnote{To be mathematically precise, our functionals are not quite linear. Linearity implies a mapping between vector spaces, and $S^k$ is not a vector space. Talking about the functionals as linear gives the right idea though, so we will continue to do so.} We call such a function a 1-functional, or a linear functional over 1-surfaces. 
 
 As another example, consider a surface $\sigma$, and a function $\Phi: S^2 \to \mathbb{R}$ that determines magnetic flux, such that $\Phi(\sigma)$ is the magnetic flux through $\sigma$. Similarly to the case with $\lambda$, we may break up $\sigma$ into finite constituent pieces, attached side-to-side. We therefore have that \begin{gather} \Phi(\sigma) = \sum_{i=1}^n \Phi(\sigma_i) \end{gather} for $\sigma$ broken up into $n$ different pieces, requiring once again that the pieces are stuck exactly side-to-side. We call $\Phi$ a 2-functional, or a linear function over 2-surfaces. 
@@ -201,8 +198,7 @@ One more specification is necessary: the fact that $f_k$ must commute with the l
 
 If we have a 1-functional $f$, each individual $f(\lambda_i)$, as well as $f(\lambda)$ itself, will separately take on a value. We require that the limit holds, meaning that \begin{gather}  f\left(\lim_{i = 1 \to \infty} \lambda_i\right) = f(\lambda). \end{gather}
 
-To give an example where this condition is not fulfilled, suppose we have a straight line $\lambda$, and we want to determine its length. Say the length and height both equal $a$. Therefore, it's length is $\sqrt{2}a$. However, the length of the horizontal and vertical components together is $2a$. Further subdividing each horizontal and vertical component will create a sequence that does, in the limit, converge to $\lambda$. However, the length of this sequence will always, even in the limit, remain $2a$. Therefore, the length functional does not commute with the limit. [\textbf{Insert picture of subdividing lines, showing that the length doesn't work out}]
-
+To give an example where this condition is not fulfilled, suppose we have a straight line $\lambda$, and we want to determine its length. Say the length and height both equal $a$. Therefore, it's length is $\sqrt{2}a$. However, the length of the horizontal and vertical components together is $2a$. Further subdividing each horizontal and vertical component will create a sequence that does, in the limit, converge to $\lambda$. However, the length of this sequence will always, even in the limit, remain $2a$. Therefore, the length functional does not commute with the limit. 
 
 \begin{defn}
 	A \textbf{linear function of k-surfaces}, or \textbf{k-functional}, is a function $f_k : S^k \to \mathbb{R}$ such that:
@@ -258,7 +254,6 @@ The takeaway from this is that if we have a k-functional $f \in F_k$, then $\eth
 	If k-functional $f \in F_k$ is exact, then there exists some functional $g \in F_{k-1}$ such that $f = \eth g$. $g$ is the \textbf{potential} of $f$.  
 \end{prop}
 
-\textbf{Closed functional is if the surface is contractable to a point, the closed functional is zero}
 
 
 This allows us an alternate way of determining, for instance, work from a conservative force. If we have a work functional that is the boundary functional of another functional, then the force associated with it will necessarily be conservative.
@@ -322,7 +317,7 @@ As we are breaking up the line into infinitesimal segments, we see that the func
 	A \textbf{covector} $\omega_1 : V^1 \to \mathbb{R}$ is a linear function of vectors. 
 \end{defn}
 
-Concretely, consider a spring with spring constant $k$ and with a mass $m$ attached to the end, oscillating without drag. The work necessary to pull the mass from the point $x = a$ to $x = b$ (being the starting and ending points of the line $\lambda$) is $W(\lambda) = \int_a^b -kx dx$.\footnote{We are technically getting ahead of ourselves here by presenting the function with specific coordinates. We have been entirely coordinate-free so far, and will have to wait until section 2.4 for the discussion of working with coordinates} The force (the covector) is $-kx \hat{e}_x$, and the infinitesimal segment (the vector) is $dx \hat{e}^x$. In general, a 1-functional over a 1-surface is the integrated form of a covector over vectors. 
+Concretely, consider a spring with spring constant $k$ and with a mass $m$ attached to the end, oscillating without drag. The work necessary to pull the mass from the point $x = a$ to $x = b$ (being the starting and ending points of the line $\lambda$) is $W(\lambda) = \int_a^b -kx dx$.\footnote{We are technically getting ahead of ourselves here by presenting the function with specific coordinates. We have been entirely coordinate-free so far, and will have to wait until section 2.4 for the discussion of working with coordinates} The force (the covector) is $-kx e^x$, and the infinitesimal segment (the vector) is $dx e_x$. In general, a 1-functional over a 1-surface is the integrated form of a covector over vectors. 
 
 
 
@@ -402,7 +397,6 @@ Suppose we have a mass functional $M \in F_3$ and some object $\tau \in S^3$, su
 
 Consider the problem now of constructing surfaces, volumes, and their higher dimensional equivalents. Arranging two 1-vectors $\vec{a}$ and $\vec{b}$ such that they both share a starting point allows one to construct a paralellogram (a 2-vector) with sides made up of the 1-vectors. The area and orientation of this 2-vector depends on the magnitudes and orientations of the two component 1-vectors. In 3D space, this orientation would be the line normal to the 2-surface, but we are not necessarily in 3D space. By flipping the direction of one of the vectors, the area of the resulting 2-vector would be the same as before, but the orientation (the normal) would be flipped. This same mechanism works for a 1-vector and a 2-vector, creating a 3-vector, as well as for the arbitrary m-vector and n-vector, creating an (m+n)-vector (though for vectors of degree greater than three, this is much harder to visualize). We require also that our method for combining k-vectors is anticommutative or skew-symmetric. To see why it must be this way, consider an x-y plane, where the x is traditionally the horizontal, and y the vertical. Switch now x and y, so that x is now the vertical, and y is now the horizontal. Rotating the axis such that y is once again the vertical will orient the x-axis in the "negative" horizontal direction. You could say that this is a (-x)-y plane. It is thus impossible to go from a y-x plane to an x-y plane purely through rotation. Instead, you need to also flip one of the coordinate axes, meaning x $\to$ -x, or y $\to$ -y. Once that is done, the original x-y plane can be reached can be reached. The tool that combines k-vectors antisymmetrically is the \textbf{wedge product}.
 
-\textbf{Need a picture. First an x-y plane, then changing to a y-x plane, then a rotation to a (-x)-y plane}
 
 \begin{defn}
 	
@@ -471,7 +465,7 @@ Working in a space with specified coordinates allows us to solve real problems. 
 \section{Tensors and coordinate transformations}
 
 
-Nature does not come prepackaged with a specific, preferred coordinate system. It follows then that any coordinate system that we choose to impose on our system is ultimately changeable, and that our system can just as well be described with any number of coordinate systems. For instance, if we say that some object lies at point $P$ with respect to coordinate system $Q$, we can just as well say where it lies with respect to coordinate system $Q'$. 
+Nature does not come prepackaged with a specific, preferred coordinate system. It follows then that any coordinate system that we choose to impose on our system is ultimately changeable, and that our system can just as well be described with any number of coordinate systems. For instance, if we say that some object lies at point $P$ with respect to coordinate system $Q$, we can just as well say where it lies with respect to coordinate system $\hat{Q}$. 
 
 
 So, suppose we have a covector $\omega = \omega_i e^i$, where the covector components $\omega_i$ and basis $e^i$ are defined relative to coordinate system $Q$. Suppose now we have coordinate system $\hat{Q}$, relative to which the components and basis are $\hat{\omega}_j\hat{e}^j$. $\omega$ is invariant, but the components and the basis are not, and their exact form depends on the coordinate system we're using. To transform between $Q$ and $\hat{Q}$, we write \begin{gather}\omega = \omega_i e^i = \hat{\omega}_j \hat{e}^j  \end{gather}
@@ -556,7 +550,7 @@ We can relate $B$ and $C$ by defining the \textbf{exterior derivative $\eth$ on 
 
 In many treatments of Electromagnetism (for example, "Classical Electromagnetic Radiation" by Heald and Marion), Stokes' Theorem is given in terms of the curl as \begin{gather}\int_S \nabla \times \vec{A} \cdot d\vec{S} = \oint_{\Gamma} \vec{A} \cdot d\vec{l}.\end{gather} This allows us to take a brief digression to see how the tools we have defined look in the more familiar 3D cases. 
 
-We want to examine now how the exterior derivative explicity affects k-forms when written out in component form. In general, we have that for $\omega_k \in \Omega_k$, \begin{gather}\omega_k = \omega_{ab...c}e^a\wedge e^b \wedge ... \wedge e^c.\end{gather} It must be that an integral over the exterior derivative of a form results in one of the degrees of freedom being integrated away, putting the integral strictly on the boundary of the k-surface. [\textbf{Maybe show for 1D or 2D, since the general case is hard}]\begin{gather} \eth \omega_k = \partial_a\omega_{bc...d}e^a\wedge e^b\wedge e^c\wedge ... \wedge e^d.\end{gather} So, suppose we have $f \in \Omega_0$, $v \in \Omega_1$, and $B \in \Omega_2$, and we apply the exterior derivative to each of them. We have that \begin{gather}\eth f = \partial_a f e^a,\end{gather} \begin{gather}\eth v = \partial_a v_b e^a \wedge e^b,\end{gather} and \begin{gather}\eth B = \partial_a B_{bc} e^a\wedge e^b \wedge e^c.\end{gather} 
+We want to examine now how the exterior derivative explicity affects k-forms when written out in component form. In general, we have that for $\omega_k \in \Omega_k$, \begin{gather}\omega_k = \omega_{ab...c}e^a\wedge e^b \wedge ... \wedge e^c.\end{gather} It must be that an integral over the exterior derivative of a form results in one of the degrees of freedom being integrated away, putting the integral strictly on the boundary of the k-surface. \begin{gather} \eth \omega_k = \partial_a\omega_{bc...d}e^a\wedge e^b\wedge e^c\wedge ... \wedge e^d.\end{gather} So, suppose we have $f \in \Omega_0$, $v \in \Omega_1$, and $B \in \Omega_2$, and we apply the exterior derivative to each of them. We have that \begin{gather}\eth f = \partial_a f e^a,\end{gather} \begin{gather}\eth v = \partial_a v_b e^a \wedge e^b,\end{gather} and \begin{gather}\eth B = \partial_a B_{bc} e^a\wedge e^b \wedge e^c.\end{gather} 
 
 By looking closer at these expressions, we see familiar tools from vector calculus arise. $\partial_a f e^a$ is a 1-form consisting of the sum of derivatives in each of the basis directions. In the 3D case, we have that \begin{gather}\partial_a f e^a = \frac{\partial f}{\partial x^1} e^1 + \frac{\partial f}{\partial x^2} e^2 + \frac{\partial f}{\partial x^3} e^3.\end{gather} This is simply the gradient of a scalar functional. So, we have that in $\mathbb{R}^3$, \begin{gather}\partial_a f e^a = \nabla f.\end{gather} Similarly, we see that in 3D, $\eth v$ will give us a 2-form from a 1-form, composed of the sum of derivatives in the directions perpendicular to the original 1-form. That is, in $\mathbb{R}^3$,\begin{gather}\eth v = \partial_a v_b e^a\wedge e^b = (\frac{\partial v_2}{\partial x^3} - \frac{\partial v_3}{\partial x^2})e^2\wedge e^3 - (\frac{\partial v_1}{\partial x^3} - \frac{\partial v_3}{\partial x^1})e^1 \wedge e^3 + (\frac{\partial v_1}{\partial x^2} - \frac{\partial v_2}{\partial x^1})e^1 \wedge e^2.\end{gather} Similarly, we find that \begin{gather} \eth B = \partial_a B_{bc}e^a\wedge e^b\wedge e^c = (\frac{\partial B_1}{\partial x^1} + \frac{\partial B_2}{\partial x^2} + \frac{\partial B_3}{\partial x^3})e^1\wedge e^2 \wedge e^3.\end{gather} We see here that $\eth v$ doesn't \emph{quite} give us $\nabla \times v$, and $\eth B$ doesn't \emph{quite} give us $\nabla \cdot B$. This discrepancy demonstrates the difference between the wedge product and the cross product. Had we done $\nabla \times v$, the first term would have been $(\frac{\partial v_2}{\partial x^3} - \frac{\partial v_3}{\partial x^2})e^1$. That is, in the direction perpendicular to $e^2\wedge e^3$. This is similarly true for the components in $e^1\wedge e^3$ and $e^1 \wedge e^2$. Furthermore, $\nabla \cdot B$ returns a scalar\footnote{Note however that $\nabla \cdot B$ doesn't even return a true scalar. Rather, it returns a pseudoscalar: $\frac{\rho}{\epsilon_0}$. The difference here is similar to the difference between vector and pseudovector: if you flip one of the coordinates, you get an extra minus sign in a pseudoscalar, but a scalar is left invariant. Pseudovectors are associated with surfaces, and pseudoscalars are associated with volumes (hence, charge \textit{density} $\rho$.)} (i.e., no direction), while $\eth B$ returns a volume in the $e^1 \wedge e^2 \wedge e^3$ "direction." This discrepancy is resolved by the introduction of the Hodge Dual Operator $*$, such that $*\eth v = \nabla \times v$ and $*\eth B = \nabla \cdot B$, but this is beyond us at the moment. What does hold immediately true is a generalization of the expression \begin{gather} \nabla \times \nabla V = 0\end{gather} for any scalar function $V$. For any form $\omega_k \in \Omega_k$, we have that \begin{gather} \eth\eth\omega_k = 0.\end{gather}
 
@@ -572,11 +566,9 @@ With these new, more general geometric expressions for gradient, curl, and diver
 
 
 
-In our discussions of Work functionals in Chapter 1, there naturally arose a relationship between functionals on boundaries and path independent work. We can expand on this relationship now by making use of forms and the exterior derivative. Recall that if we have a path-independent work functional $W \in F_1$, then for any closed line $\lambda \in S^1$, the work done will be zero. Furthermore, we said that if $W$ is a path-independent functional, than it admits a potential $V$ such that $W = \eth V$. So, we had that \begin{gather} W(\lambda) = \eth V(\lambda) = V(\partial\lambda) = 0.\end{gather}
+In our discussions of work functionals in Chapter 1, there naturally arose a relationship between functionals on boundaries and path independent work. We can expand on this relationship now by making use of forms and the exterior derivative. Recall that if we have a path-independent work functional $W \in F_1$, then for any closed line $\lambda \in S^1$, the work done will be zero. Furthermore, we said that if $W$ is a path-independent functional, then it admits a potential $V$ such that $W = \eth V$. So, we had that \begin{gather} W(\lambda) = \eth V(\lambda) = V(\partial\lambda) = V(\emptyset) = 0.\end{gather}
 
-We can start working infinitesimally now. Suppose $W$ has an associated 1-form $f$, and $V$ a 0-form $\alpha$. We have therefore that $W = \int f$, and $V = \int \alpha$. So, because $W = \eth V$, we have that \begin{gather} \eth V(\lambda) = \int_\lambda f(d\lambda) = \int_{\partial\lambda} \eth \alpha(d\partial\lambda) \end{gather} \begin{gather}\implies f = \eth\alpha.\end{gather} 
-
-By relating $f$ to the exact functional $W$, there naturally arose the fact that $f$ is the exterior derivative of the form $\alpha$, associated with the potential of $W$. We call $f$ an exact functional, since it's the exterior derivative of another form. 
+We can start working infinitesimally now. Suppose $W$ has an associated 1-form $f$, and $V$ a 0-form $\alpha$. We have therefore that $W = \int f$, and $V = \int \alpha$. So, because $W = \eth V$, we have that $f = \eth\alpha$. We call $f$ an exact functional, since it's the exterior derivative of another form. 
 
 \begin{defn} 
 	A k-form \textbf{$\omega$} is \textbf{exact} if there exists a (k-1)-form $\alpha$ such that $\omega = \eth\alpha$. We call $\alpha$ the potential of $\omega$. 
@@ -601,8 +593,7 @@ But the converse is not necessarily true. Say we have a 1-form $A$ such that $A 
 	Not all closed forms are exact. 	
 \end{prop}
 
-
- Despite this, a region may be constructed such that the closed form is \emph{locally} exact. The only requirement to this region is that it does not include the discontinuity (the origin, in the case of $A$). Therefore, a potential exists in that local region. Thus, a force may be locally conservative, even if it is not globally conservative. 
+Closed forms correspond to functionals that are zero on contractable closed surfaces. Because of this, a region may be constructed such that the closed form is \emph{locally} exact. The only requirement to this region is that it does not include the discontinuity (the origin, in the case of $A$). Therefore, a potential exists in that local region. Thus, a force may be locally conservative, even if it is not globally conservative. 
 
 
 
