Changes from meeting

--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@
 		\vspace*{1cm}
 		
 		\LARGE
-		\textbf{The Mathematics of the Investigation of Physical Objects}
+		\textbf{Physical Motivations of Differential Topology}
 		
 		\vspace{2cm}
 		
@@ -101,7 +101,7 @@ With coordinate systems now defined, we recognize that in many instances, two di
 
 
 \begin{defn}
-	Given two coordinate systems  $Q : U \to \mathbb{R}^n$ and $Q' : V \to \mathbb{R}^n$ such that $U \cap V \neq \emptyset$, we call a \textbf{coordinate transformation} the function $f = Q' \circ (Q)^{-1} : \mathbb{R}^n \to \mathbb{R}^n$ (Figure 1.1).
+	Given two coordinate systems  $Q : U \to \mathbb{R}^n$ and $Q' : V \to \mathbb{R}^n$ such that $U \cap V \neq \emptyset$, we call a \textbf{coordinate transformation} the function $f = Q' \circ (Q)^{-1} : \mathbb{R}^n \to \mathbb{R}^n$.
 \end{defn}
 
 
@@ -436,6 +436,7 @@ Consider the problem now of constructing surfaces, volumes, and their higher dim
 	\caption{After switching the axes, merely rotating them cannot return you to the original x-y plane. An additional flip of one of the axes is necessary.}
 \end{figure}
 
+\textbf{Show this from both directions. Basically a visual proof}
 
 The tool that combines k-vectors antisymmetrically is the \textbf{wedge product}.
 
@@ -641,8 +642,13 @@ Closed forms correspond to functionals that are zero on contractable closed surf
 
 
 
-\chapter{Conclusion}
+\chapter*{Conclusion}
 
+- Summary of what was done
+
+- Explain the point once again (minimal tools to describe physical things)
+
+- Briefly discuss things we didn't get the change to cover, such as metric tensor, symplectic form, maybe hodge dual? 
 
 
 
